--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ a:hover {
 }
 
 .dark-mode {
-        background-color: #1a1a1a;
-        color: #ffffff;
+    background-color: #1a1a1a;
+    color: #ffffff;
 }
 
 .dark-mode .card {
@@ -49,7 +49,6 @@ a:hover {
     transform: rotate(180deg);
 }
 
-/* CSS untuk garis vertikal pink */
 .vertical-line {
     position: relative;
     padding-left: 20px; /* Memberi ruang untuk garis vertikal */
@@ -65,6 +64,7 @@ a:hover {
     width: 4px;
     background-color: #ff4081; /* Warna pink */
 }
+
 .image-profile {
     width: 150px; /* Sesuaikan ukuran gambar bulat sesuai kebutuhan Anda */
     height: 150px;
@@ -74,8 +74,24 @@ a:hover {
     display: block; /* Agar margin auto berfungsi, gambar perlu menjadi elemen blok */
 }
 
-/* Contoh styling untuk gambar */
 .image-profile img {
     width: 100%; /* Agar gambar sesuai dengan lingkaran */
     height: auto; /* Agar gambar tidak terdistorsi */
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+}
+
+.carousel-item {
+    height: 400px;
+    background-color: #333;
+    color: white;
+}
+
+.carousel-item img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
