--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ a:hover {
 .card:hover {
     transform: scale(1.05);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+    border: 2px solid white;
+    border-radius: 10px; /* Atur sesuai keinginan */
+    padding: 10px; /* Atur sesuai kebutuhan */
+  /* Properti lainnya */
 }
 
 /* Light and Dark Mode */
@@ -37,12 +41,16 @@ a:hover {
     background-color: #ffffff;
     color: #000000;
 }
+.light-mode .card:hover {
+    border: 2px solid black;
+}
+
 .dark-mode {
     background-color: #1a1a1a;
     color: #ffffff;
 }
 .dark-mode .card {
-    background-color: #333333;
+    background-color: #1E1E1E;
 }
 
 /* Theme Icon */
